samples/_failures_safe/1761225918_44fe29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afb21902.c: In function ‘main’:
./samples/SAFE/__tmp_afb21902.c:174:9: error: expected declaration or statement at end of input
  174 |         fprintf(stderr, "Invalid number of edges\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_afb21902.c:174:9: error: expected declaration or statement at end of input
